objects/CZPartyAlias__c.object
<CustomObject>
    <description>Party Alias</description>
    <fields>
        <fullName>AliasFirstName__c</fullName>
        <description>Alias First Name</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Alias First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AliasLastName__c</fullName>
        <description>Alias Last Name</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Alias Last Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AliasType__c</fullName>
        <description>Alias Type</description>
        <label>Alias Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>INDIVIDUAL</fullName>
                </value>
                <value>
                    <fullName>ORGANIZATION</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Delete Alias used for UI and SF integration</description>
        <label>Delete Alia</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Party__c</fullName>
        <description>Reference to Party field</description>
        <label>Party</label>
        <referenceTo>tffa__Party__c</referenceTo>
        <relationshipLabel>PartyAlias</relationshipLabel>
        <relationshipName>CZPartyAliases</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SortOrder__c</fullName>
        <description>Sort Order</description>
        <label>SortOrder</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>PartyAlias</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>PartyAlias</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PartyAlias</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>